--- a/task.html
+++ b/task.html
@@ -1,8 +1,29 @@
+<head>
+<style>
+    h1: {color: green;}
+    .contenders: {display: flex;flex-direction:column;height:28%;width: 100%;border:1px solid black}
+    .prize: {border:1px solid black;}
+</style>
+</head>
+
+
 <h1>Taskmaster Champions!</h1>
 <h3>Saturday 21st March 2020</h3>
 
-<img href="twitter.png"/>
+<div class="prize">
+    <img src="trophy.jpg" />
+    <h2>We are the champions!</h2>
+    <img src="bt.jpeg" />
+    <h3>One PREMIUM DRINK!</h3>
+</div>
 
-<style>
-    h1: {color: green;}
-</style>
+<div class="contenders">
+    <img src="bt.jpeg" />
+    <img src="da.jpeg" />
+    <img src="dg.jpeg" />
+    <img src="hn.jpeg" />
+    <img src="ma.jpeg" />
+    <img src="ss.jpeg" />
+</div>
+
+
