--- a/task.html
+++ b/task.html
@@ -1,12 +1,3 @@
-<head>
-<style>
-    h1: {color: green;}
-    .contenders: {display: flex;flex-direction:column;height:28%;width: 100%;border:1px solid black}
-    .prize: {border:1px solid black;}
-</style>
-</head>
-
-
 <h1>Taskmaster Champions!</h1>
 <h3>Saturday 21st March 2020</h3>
 
@@ -15,6 +6,7 @@
     <h2>We are the champions!</h2>
     <img src="bt.jpeg" />
     <h3>One PREMIUM DRINK!</h3>
+    <p>After the apocalypse</p>
 </div>
 
 <div class="contenders">
