--- a/task.html
+++ b/task.html
@@ -1,4 +1,4 @@
-<h1>Taskmaster Champions!</h1>
+<h1 style="color:gold">Taskmaster Champions!</h1>
 <h3>Saturday 21st March 2020</h3>
 
 <div class="prize">
@@ -9,7 +9,7 @@
     <p>After the apocalypse</p>
 </div>
 
-<div class="contenders">
+<div class="contenders" style="display: flex;flex-direction:column;height:28%;width:100%;border:1px solid black;">
     <img src="bt.jpeg" />
     <img src="da.jpeg" />
     <img src="dg.jpeg" />
