--- a/task.html
+++ b/task.html
@@ -3,19 +3,19 @@
 
 <div class="prize">
     <img src="trophy.jpg" />
+    <img style="height:150px;width:150px" src="bt.jpeg" />
     <h2>We are the champions!</h2>
-    <img src="bt.jpeg" />
     <h3>One PREMIUM DRINK!</h3>
     <p>After the apocalypse</p>
 </div>
 
-<div class="contenders" style="display: flex;flex-direction:column;height:28%;width:100%;border:1px solid black;">
-    <img src="bt.jpeg" />
-    <img src="da.jpeg" />
-    <img src="dg.jpeg" />
-    <img src="hn.jpeg" />
-    <img src="ma.jpeg" />
-    <img src="ss.jpeg" />
+<div class="contenders" style="display: inline-block;height:28%;width:100%;border:1px solid black;">
+    <img style="height:80px;width:80px" src="bt.jpeg" />
+    <img style="height:80px;width:80px" src="da.jpeg" />
+    <img style="height:80px;width:80px" src="dg.jpeg" />
+    <img style="height:80px;width:80px" src="hn.jpeg" />
+    <img style="height:80px;width:80px" src="ma.jpeg" />
+    <img style="height:80px;width:80px" src="ss.jpeg" />
 </div>
 
 
