--- a/task.html
+++ b/task.html
@@ -1,21 +1,20 @@
-<h1 style="color:gold">Taskmaster Champions!</h1>
+<h1 style="color:gold">Taskmaster Champions?</h1>
 <h3>Saturday 21st March 2020</h3>
 
 <div class="prize">
     <img src="trophy.jpg" />
-    <img style="height:150px;width:150px" src="bt.jpeg" />
     <h2>We are the champions!</h2>
     <h3>One PREMIUM DRINK!</h3>
     <p>After the apocalypse</p>
 </div>
 
 <div class="contenders" style="display: inline-block;height:28%;width:100%;border:1px solid black;">
-    <img style="height:80px;width:80px" src="bt.jpeg" />
-    <img style="height:80px;width:80px" src="da.jpeg" />
-    <img style="height:80px;width:80px" src="dg.jpeg" />
-    <img style="height:80px;width:80px" src="hn.jpeg" />
-    <img style="height:80px;width:80px" src="ma.jpeg" />
-    <img style="height:80px;width:80px" src="ss.jpeg" />
+    <img style="height:130px;width:130px" src="bt.jpeg" />
+    <img style="height:130px;width:130px" src="da.jpeg" />
+    <img style="height:130px;width:130px" src="dg.jpeg" />
+    <img style="height:130px;width:130px" src="hn.jpeg" />
+    <img style="height:130px;width:130px" src="ma.jpeg" />
+    <img style="height:130px;width:130px" src="ss.jpeg" />
 </div>
 
 
