--- a/task.html
+++ b/task.html
@@ -4,17 +4,17 @@
 <div class="prize">
     <img src="trophy.jpg" />
     <h2>We are the champions!</h2>
-    <h3>One PREMIUM DRINK!</h3>
-    <p>After the apocalypse</p>
+    <h3 style="color:purple">PRIZE: One PREMIUM DRINK!</h3>
+    <p>*After the apocalypse</p>
 </div>
 
 <div class="contenders" style="display: inline-block;height:28%;width:100%;border:1px solid black;">
-    <img style="height:130px;width:130px" src="bt.jpeg" />
-    <img style="height:130px;width:130px" src="da.jpeg" />
-    <img style="height:130px;width:130px" src="dg.jpeg" />
-    <img style="height:130px;width:130px" src="hn.jpeg" />
-    <img style="height:130px;width:130px" src="ma.jpeg" />
-    <img style="height:130px;width:130px" src="ss.jpeg" />
+    <img style="height:180px;width:180px" src="bt.jpeg" />
+    <img style="height:180px;width:180px" src="da.jpeg" />
+    <img style="height:180px;width:180px" src="dg.jpeg" />
+    <img style="height:180px;width:180px" src="hn.jpeg" />
+    <img style="height:180px;width:180px" src="ma.jpeg" />
+    <img style="height:180px;width:180px" src="ss.jpeg" />
 </div>
 
 
