--- a/task.html
+++ b/task.html
@@ -3,9 +3,9 @@
 
 <div class="prize">
     <img src="trophy.jpg" />
-    <h2>We are the champions!</h2>
-    <h3 style="color:purple">PRIZE: One PREMIUM DRINK!</h3>
-    <p>*After the apocalypse</p>
+    <h2>Who are the champions?</h2>
+    <h3 style="color:purple">PRIZE: One PREMIUM DRINK! TOKEN</h3>
+    <p>*After the apocalypse, face value 0.001p</p>
 </div>
 
 <div class="contenders" style="display: inline-block;height:28%;width:100%;border:1px solid black;">
