--- a/task.html
+++ b/task.html
@@ -1,11 +1,11 @@
-<h1 style="color:gold">Taskmaster Champions?</h1>
+<h1 style="color:gold">Taskmaster Champions!</h1>
 <h3>Saturday 21st March 2020</h3>
 
 <div class="prize">
     <img src="trophy.jpg" />
-    <h2>Who are the champions?</h2>
-    <h3 style="color:purple">PRIZE: One PREMIUM DRINK! TOKEN</h3>
-    <p>*After the apocalypse, face value 0.001p</p>
+    <h2>Sarah and Shannon are the champions!</h2>
+    <img style="height:180px;width:180px" src="ss.jpeg" />
+    <h3 style="color:purple">PRIZE: One PREMIUM DRINK!</h3>
 </div>
 
 <div class="contenders" style="display: inline-block;height:28%;width:100%;border:1px solid black;">
